Css & nav fixes

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -5,7 +5,7 @@
       <a href="{{site.url}}/" title="Home">Home</a>
     </li>
     <li class="link dim gray f4 dib mr3">
-      <a href="{{site.url}}/archives" title="Archives">Todos os Decretos</a>
+      <a href="{{site.url}}/decretos" title="Archives">Todos os Decretos</a>
     </li>
   </ul>
 </nav>
