--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,11 +1,11 @@
 <hr>
 <nav role="navigation" class="mw7 ph0-l ph5-m ph3 center black-70">
   <ul class="pa0 nowrap overflow-x-auto">
-    <li class="link dim gray f4 dib mr3">
-      <a href="{{site.url}}/" title="Home">Home</a>
+    <li class="dim gray f4 dib mr3">
+      <a href="{{site.url}}/" title="Home" class="link">Home</a>
     </li>
-    <li class="link dim gray f4 dib mr3">
-      <a href="{{site.url}}/decretos" title="Archives">Todos os Decretos</a>
+    <li class="dim gray f4 dib mr3">
+      <a href="{{site.url}}/decretos" title="Archives" class="link">Todos os Decretos</a>
     </li>
   </ul>
 </nav>
