--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include _head.html %}
-<body class="bg-light-gray athelas">
+<body class="bg-light-gray athelas pv3">
   {% include _header.html %}
+  <article class="f3-m f5 lh-copy center">
   {{content}}
+  </article>
   {% include _related_posts.html %}
   {% include _navigation.html %}
   {% include _google_analytics.html %}
